# SocialWelfare

./: README.md  db.py  fetch_and_save.py  main.py  requirements.txt
Corporate_Program/: main.py  manifest.json
Keywords/text_category_keywords/: category.py  category_keywords.txt
MCP/: .gitignore  api.env  client.py  pyproject.toml  server.py
MyMCPProject/: README.md  client.py  package-lock.json  pyproject.toml  requirements.txt  server.py
NLP/: classify.py  prompt.txt
docs/: index.html  script.js  style.css
templates/: index.html
