[project]
name = "MyMCPProject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.46.0",
    "python-dotenv>=1.2.1",
    "playwright>=1.55.0",
    "ollama>=0.6.0",
    "fastmcp>=2.13.0.2",
    "beautifulsoup4>=4.14.2",
    "openai>=2.8.0",
    "sqlalchemy>=2.0.44",
    "pymysql>=1.1.2",
]
